--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="social">#00BFFF</color>
     <color name="background">#FFFFFF</color>
     <color name="Ruby">#C02F1D</color>
-    <color name="Yellow">#BBBB00</color>
+    <color name="Yellow">#FFFF00</color>
 
     <color name="DarkestAlice">#107896</color>
     <color name="LighterAlice">#43ABC9</color>
