--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -18,6 +18,7 @@
         android:ems="10"
         android:hint="Event Description"
         android:inputType="textShortMessage"
+        android:singleLine="false"
         app:layout_constraintBottom_toTopOf="@+id/setDate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
