--- a/app/src/main/res/layout/activity_events_page.xml
+++ b/app/src/main/res/layout/activity_events_page.xml
@@ -7,6 +7,17 @@
     tools:context=".EventsPage">
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton2"
         android:layout_width="70dp"
         android:layout_height="70dp"
