--- a/app/src/main/res/layout/event_template.xml
+++ b/app/src/main/res/layout/event_template.xml
@@ -38,12 +38,14 @@
 
             <TextView
                 android:id="@+id/eventName"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:text="TextView"
                 android:textSize="24sp"
+                app:layout_constraintBottom_toTopOf="@+id/hostEmail"
+                app:layout_constraintEnd_toStartOf="@+id/eventDate"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/image" />
 
